--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,27 @@ spring:
     password: password
     change-log: liquibase-changelog.yaml
 
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
+  destinations:
+    queues:
+      NYSE:
+        exchange: nyse
+        routing-key: NYSE
+      IBOV:
+        exchange: ibov
+        routing-key: IBOV
+
+
+    topics:
+      weather:
+        exchange: alerts
+        routing-key: WEATHER
+
 logging:
   level:
     org:
